# config

./: .gitignore  README.md  a.json  a.lua  alacritty.toml  basic.toml  bootstrap.sh  btop.conf  colors.yaml  config.fish  config.toml  config.yaml  config.yml  default.fzfrc  font.toml  icons.yaml  init.lua  keymap-unbind.tmux.conf  keymap-win.tmux.conf  keymap.macos.toml  keymap.osx.tmux.conf  keymap.tmux.conf  keymap.toml  keymap.win.tmux.conf  lazy-lock.json  lazyvim.json  nvim.fzfrc  plugin.tmux.conf  theme.dark.yaml  theme.light.yaml  theme.light.yml  theme.tmux.conf  tmux.conf  types.ripgreprc  variable.tmux.conf  web.tsx.ripgreprc  yazi.toml
rust/nvim_tools/: Cargo.toml  Makefile.toml  README.md  build.ps1  build.sh
rust/nvim_tools/src/: lib.rs
rust/nvim_tools/src/algorithm/: kmp.rs  lcs.rs  mod.rs
rust/nvim_tools/src/algorithm/lcs/: mod.rs  myers.rs  myers_linear_space.rs
rust/nvim_tools/src/oxi/: file.rs  find.rs  list.rs  mod.rs  path.rs  replace.rs  search.rs  string.rs  time.rs
rust/nvim_tools/src/types/: file.rs  match.rs  mod.rs  replace.rs  ripgrep_result.rs  string.rs
rust/nvim_tools/src/util/: file.rs  find.rs  match.rs  mod.rs  path.rs  replace.rs  search.rs  string.rs
rust/nvim_tools/src/util/file/: mod.rs  readdir.rs
rust/nvim_tools/src/util/find/: find_files.rs
rust/nvim_tools/src/util/regex/: mod.rs  static_regex.rs
rust/nvim_tools/src/util/replace/: mod.rs  replace_file.rs  replace_preview.rs  replace_text.rs
rust/nvim_tools/tests/: replace.rs  rg.rs  string.rs
rust/nvim_tools/tests/fixtures/: a.js  a.txt  b.txt  c.txt
(+1358 files in other folders)
