[package]
name = "nvim_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fancy-regex = "0.13.0"
lazy_static = "1.4.0"
nvim-oxi = { version = "0.5.0", features=["neovim-nightly"] }
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

