[package]
name = "nvim_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
globset = "0.4.14"
lazy_static = "1.4.0"
nvim-oxi = { version = "0.5.0", features=["neovim-nightly"] }
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
walkdir = "2.3.2"

[dev-dependencies]

